--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,43 +5,25 @@ on:
   pull_request:
 
 env:
-  AZURE_SUBSCRIPTION_ID: "d79a8503-567c-4e5c-8832-787745b17da3"
-  AZURE_CLIENT_ID: "10ce4690-06c8-4193-8265-7353d694009e"
-  AZURE_TENANT_ID: "52497ec2-0945-4f55-8021-79766363dd96"
+  NODE_VERSION: '20.x'
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'azure-functions'
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-        id-token: write # Required for OIDC
-        contents: read # Required for actions/checkout
+    defaults:
+      run:
+        working-directory: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+
     steps:
       - uses: actions/checkout@v4
-      - name: Install dependencies
-        run: npm install
-      - name: TypeScript compile
-        run: npm run build
-
-  deploy:
-    runs-on: ubuntu-latest
-    #needs: build
-    permissions:
-        id-token: write # Required for OIDC
-    steps:
-      # ...download your build artifact
-      - name: 'Log in to Azure with AZ CLI'
-        uses: azure/login@v2
+      - name: Setup Node ${{ env.NODE_VERSION }} Environment
+        uses: actions/setup-node@v4
         with:
-          client-id: ${{ env.AZURE_CLIENT_ID }} # Required to log in with OIDC
-          tenant-id: ${{ env.AZURE_TENANT_ID }} # Required to log in with OIDC
-          subscription-id: ${{ env.AZURE_SUBSCRIPTION_ID }} # Required to log in with OIDC
-
-      - name: apply infrastructure
-        uses: azure/cli@v2
-        with:
-          azcliversion: latest
-          inlineScript: |
-            az functionapp function list --name poc-one-pager --resource-group one-pager
+          node-version: ${{ env.NODE_VERSION }}
+      - run: npm install
+      - run: npm run build --if-present
+      - run: npm run test --if-present
 
   # lint-validate-bicep:
   #   runs-on: ubuntu-latest
