--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
           # This will add both a CLI output to the console and create a results.sarif file
           output_format: cli,sarif
           output_file_path: console,results.sarif
-          directory: azure-functions/infra
+          directory: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/infra'
           framework: bicep
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v3
@@ -49,39 +49,3 @@ jobs:
         if: success() || failure()
         with:
           sarif_file: results.sarif
-
-
-  # lint-validate-bicep:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Lint Bicep
-  #       run: az bicep build --file infra/main.bicep
-  #     - name: Validate Bicep
-  #       run: az deployment group validate --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} --template-file infra/main.bicep --parameters functionAppName=dummy
-
-  # typescript-compile:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Set up Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: '20.x'
-  #     - name: Install dependencies
-  #       run: npm install
-  #     - name: TypeScript compile
-  #       run: npm run build
-
-  # test:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Set up Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: '20.x'
-  #     - name: Install dependencies
-  #       run: npm install
-  #     - name: Run tests
-  #       run: npx jest
