--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -11,9 +11,13 @@
     "start": "func start"
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0"
+    "@azure/functions": "^4.0.0",
+    "@azure/identity": "^4.10.0",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
+    "isomorphic-fetch": "^3.0.0"
   },
   "devDependencies": {
+    "@microsoft/microsoft-graph-types": "^2.40.0",
     "@types/node": "18.x",
     "rimraf": "^6.0.1",
     "typescript": "^4.0.0"
