--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -9,8 +9,7 @@
     "clean": "rimraf dist",
     "prestart": "npm run clean && npm run build",
     "start": "func start",
-    "test": "jest",
-    "test-ci": "jest --ci --reporters=default --reporters=jest-junit"
+    "test": "jest"
   },
   "dependencies": {
     "@azure/functions": "^4.7.2",
