--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,9 +28,9 @@ jobs:
         uses: dorny/test-reporter@v2
         if: ${{ !cancelled() }}       # run this step even if previous step failed
         with:
-          name: JEST Tests            # Name of the check run which will be created
-          path: reports/jest-*.xml    # Path to test results
-          reporter: jest-junit        # Format of test results
+          name: JEST Tests
+          path: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}reports/jest-*.xml'
+          reporter: jest-junit
 
   check-infra:
     runs-on: ubuntu-latest
