--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
           output_file_path: console,results.sarif
           directory: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/infra'
           framework: bicep
+          soft_fail: true
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v3
 
