--- a/azure-functions/tsconfig.json
+++ b/azure-functions/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "dist",
     "rootDir": ".",
     "sourceMap": true,
-    "strict": false,
-    "esModuleInterop": true
+    "strict": true,
+    "esModuleInterop": true,
+    "strictNullChecks": true
   }
 }
