--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
       run:
         working-directory: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
 
+    concurrency:
+        group: 'SharePointTest' # Tests act on a real SharePoint-Repo, so they must not be run concurrently.
+
     steps:
       - uses: actions/checkout@v4
       - name: Setup Node ${{ env.NODE_VERSION }} Environment
