--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
       run:
         working-directory: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
 
+    concurrency:
+        group: 'SharePointTest' # Tests act on a real SharePoint-Repo, so they must not be run concurrently.
+
     steps:
       - uses: actions/checkout@v4
       - name: Setup Node ${{ env.NODE_VERSION }} Environment
@@ -24,6 +27,10 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: npm test
+        env:
+            SHAREPOINT_CLIENT_ID: "1621d264-a7bb-40b6-bfef-9b2839cb7eec"
+            SHAREPOINT_TENANT_ID: "52497ec2-0945-4f55-8021-79766363dd96"
+            SHAREPOINT_CLIENT_SECRET: ${{ secrets.SHAREPOINT_CLIENT_SECRET }}
       - name: Test Report
         uses: dorny/test-reporter@v2
         if: ${{ !cancelled() }}       # run this step even if previous step failed
