--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+          cache-dependency-path: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/package-lock.json'
       - run: npm ci
       - run: npm run build
       - run: npm test
@@ -50,6 +52,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+          cache-dependency-path: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/package-lock.json'
       - run: npm ci
       - run: npm run build
       - uses: JarvusInnovations/background-action@v1
@@ -61,11 +65,25 @@ jobs:
             npx azurite &
 
             echo "Starting local Azure Functions..."
-            npx azure-functions-core-tools start &
+            STORAGE_SOURCE=localfile DATA_DIR=.storage npx azure-functions-core-tools start &
           wait-for: 5m
           wait-on: |
             http://localhost:7071
-      - run: curl -XPOST --fail-with-body http://localhost:7071/api/validate/1338
+      - name: Check local running Functions
+        run: |
+            echo "create employee without one-pager"
+            mkdir .storage
+            echo "[]" > .storage/1338_onepagers.json
+            curl -XPOST --fail-with-body http://localhost:7071/api/validate/1338 2> /dev/null
+            echo
+
+            sleep 5 # wait for the function to finish processing
+
+            echo "check if validation error was written"
+            if ! jq -e 'index("MISSING_ONE_PAGER")' .storage/1338_validation.json >/dev/null; then
+              echo 'File does not contain "MISSING_ONE_PAGER" in the array' >&2
+              exit 1
+            fi
 
   check-infra:
     runs-on: ubuntu-latest
