--- a/azure-functions/local.settings.json
+++ b/azure-functions/local.settings.json
@@ -4,6 +4,9 @@
     "FUNCTIONS_WORKER_RUNTIME": "node",
     "FUNCTIONS_EXTENSION_VERSION": "~4",
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
+    "STORAGE_SOURCE": "sharepoint",
+    "SHAREPOINT_API_LOGGING": "true",
+    "SHAREPOINT_ONE_PAGER_SITE_NAME": "senacor.sharepoint.com:/teams/MaInfoTest",
     "SHAREPOINT_CLIENT_ID": "1621d264-a7bb-40b6-bfef-9b2839cb7eec",
     "SHAREPOINT_TENANT_ID": "52497ec2-0945-4f55-8021-79766363dd96",
     "SHAREPOINT_CLIENT_SECRET": "<add your client secret here>"
