--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -15,7 +15,8 @@
         "@azure/functions": "^4.7.2",
         "@azure/identity": "^4.10.0",
         "@microsoft/microsoft-graph-client": "^3.0.7",
-        "isomorphic-fetch": "^3.0.0"
+        "isomorphic-fetch": "^3.0.0",
+        "nodejs-pptx": "^1.2.4"
     },
     "devDependencies": {
         "@microsoft/microsoft-graph-types": "^2.40.0",
