--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
     permissions:
       contents: read
       id-token: write
-    needs: apply-infra-definitions
+    #needs: apply-infra-definitions
     steps:
       - uses: actions/checkout@v4
       - name: 'Log in to Azure with AZ CLI'
