--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -15,11 +15,13 @@
         "@azure/functions": "^4.7.2",
         "@azure/identity": "^4.10.0",
         "@microsoft/microsoft-graph-client": "^3.0.7",
+        "extract-zip": "^2.0.1",
         "isomorphic-fetch": "^3.0.0",
-        "nodejs-pptx": "^1.2.4"
+        "jszip": "^3.10.1"
     },
     "devDependencies": {
         "@microsoft/microsoft-graph-types": "^2.40.0",
+        "@types/isomorphic-fetch": "^0.0.39",
         "@types/jest": "^29.5.14",
         "@types/node": "^22.15.21",
         "jest": "^29.7.0",
