--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -15,6 +15,7 @@
         "@azure/functions": "^4.7.2",
         "@azure/identity": "^4.10.0",
         "@microsoft/microsoft-graph-client": "^3.0.7",
+        "hardened-fetch": "^1.2.3",
         "isomorphic-fetch": "^3.0.0",
         "jszip": "^3.10.1",
         "node-cache": "^5.1.2"
