--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -1,9 +1,17 @@
 name: reviewdog with es lint and tsc
 on: [pull_request]
+
+env:
+  NODE_VERSION: '22.x'
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'azure-functions'
+
 jobs:
   tsc:
     name: tsc reviewdog
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
     steps:
       - uses: actions/checkout@v2
       - name: Setup Node ${{ env.NODE_VERSION }} Environment
@@ -13,7 +21,9 @@ jobs:
             cache: 'npm'
             cache-dependency-path: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/package-lock.json'
       - name: Install eslint save-dev
-        run: npm install eslint -D
+        run: |
+            npm ci
+            npm install eslint -D
       - uses: reviewdog/action-eslint@2fee6dd72a5419ff4113f694e2068d2a03bb35dd # v1.33.2
         with:
           reporter: github-pr-review
