--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -6,6 +6,7 @@ env:
 
 permissions:
   contents: read
+  pull-requests: write
 
 jobs:
   tsc:
@@ -29,4 +30,4 @@ jobs:
       - uses: reviewdog/action-eslint@2fee6dd72a5419ff4113f694e2068d2a03bb35dd # v1.33.2
         with:
           reporter: github-pr-review
-          eslint_flags: "src/"
+          eslint_flags: "${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/src/"
