--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -25,8 +25,9 @@ jobs:
             cache-dependency-path: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/package-lock.json'
       - name: Node install
         run: npm ci
-      - name: Install eslint
-        run: npm i eslint -D
+     # this is already included in the package.json
+     # - name: Install eslint
+     #   run: npm install --save-dev eslint @eslint/js typescript typescript-eslint
       - uses: reviewdog/action-eslint@2fee6dd72a5419ff4113f694e2068d2a03bb35dd # v1.33.2
         with:
           reporter: github-pr-review
