--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -21,15 +21,18 @@
         "node-cache": "^5.1.2"
     },
     "devDependencies": {
+        "@eslint/js": "^9.28.0",
         "@microsoft/microsoft-graph-types": "^2.40.0",
         "@types/isomorphic-fetch": "^0.0.39",
         "@types/jest": "^29.5.14",
         "@types/node": "^22.15.21",
+        "eslint": "^9.28.0",
         "jest": "^29.7.0",
         "jest-junit": "^16.0.0",
         "rimraf": "^6.0.1",
         "ts-jest": "^29.3.4",
-        "typescript": "^5.8.3"
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.33.1"
     },
     "jest-junit": {
         "outputDirectory": "reports",
