--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -4,17 +4,18 @@ env:
   NODE_VERSION: '22.x'
   AZURE_FUNCTIONAPP_PACKAGE_PATH: 'azure-functions'
 
-permissions:
-  contents: read
-  pull-requests: write
+
 
 jobs:
-  tsc:
+  eslint-reviewdog:
     name: tsc reviewdog
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+    permissions:
+        contents: read
+        pull-requests: write
     steps:
       - uses: actions/checkout@v2
       - name: Setup Node ${{ env.NODE_VERSION }} Environment
@@ -33,4 +34,4 @@ jobs:
           reporter: github-pr-review
           eslint_flags: "src/"
           workdir: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          filter_mode: nofilter
+          #filter_mode: nofilter
