--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -31,7 +31,7 @@ jobs:
      #   run: npm install --save-dev eslint @eslint/js typescript typescript-eslint
       - uses: reviewdog/action-eslint@v1 # v1.33.2
         with:
-          reporter: github-pr-review
-          eslint_flags: "src/"
-          workdir: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          #filter_mode: nofilter
+            reporter: github-pr-review
+            eslint_flags: "src/"
+            workdir: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+            filter_mode: nofilter
