--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
 
 env:
-  NODE_VERSION: '22.x'
+  NODE_VERSION: '22.16.0'
   AZURE_FUNCTIONAPP_PACKAGE_PATH: 'azure-functions'
 
 jobs:
