--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -4,13 +4,18 @@
     "description": "",
     "main": "dist/src/functions/*.js",
     "scripts": {
-        "build": "tsc",
+        "build": "rimraf build && tsc && npm run cucumber-check && npm run lint",
         "watch": "tsc -w",
         "clean": "rimraf dist",
         "prestart": "npm run clean && npm run build",
         "start": "func start",
-        "test": "jest",
-        "featuretest": "jest \"test/Feature_Tests/.*\\.test\\.ts\""
+        "test": "jest && npm run cucumber",
+        "cucumber-check": "cucumber-js test/features/**/*.feature --dry-run  --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\" --format summary --format progress --format progress-bar",
+        "cucumber": "cucumber-js test/features/**/*.feature --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\"  --format html:reports/report.html --format summary --format @cucumber/pretty-formatter --format cucumber-console-formatter --format junit:reports/cucumber-report.xml",
+        "snippets": "cucumber-js test/features/**/*.feature --dry-run --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\" --format snippets",
+        "steps-usage": "cucumber-js test/features/**/*.feature --dry-run --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\" --format usage",
+        "lint": "eslint src test --ext .js,.ts,.mjs,.cjs,.mts,.cts",
+        "lint:fix": "eslint src test --ext .js,.ts,.mjs,.cjs,.mts,.cts --fix"
     },
     "dependencies": {
         "@azure/functions": "^4.7.2",
@@ -19,7 +24,6 @@
         "franc-min": "^6.2.0",
         "hardened-fetch": "^1.2.3",
         "isomorphic-fetch": "^3.0.0",
-        "jest-cucumber": "^4.5.0",
         "jszip": "^3.10.1",
         "node-cache": "^5.1.2",
         "node-pptx-parser": "^1.0.1",
@@ -27,11 +31,16 @@
     },
     "devDependencies": {
         "@cucumber/cucumber": "^11.3.0",
+        "@cucumber/html-formatter": "^21.11.0",
+        "@cucumber/pretty-formatter": "^1.0.1",
         "@eslint/js": "^9.28.0",
         "@microsoft/microsoft-graph-types": "^2.40.0",
         "@types/isomorphic-fetch": "^0.0.39",
         "@types/jest": "^29.5.14",
         "@types/node": "^22.15.21",
+        "cucumber-console-formatter": "^1.0.0",
+        "eslint": "^9.28.0",
+        "globals": "^16.2.0",
         "jest": "^29.7.0",
         "jest-junit": "^16.0.0",
         "rimraf": "^6.0.1",
