--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -15,7 +15,8 @@
         "snippets": "cucumber-js test/features/**/*.feature --dry-run --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\" --format snippets",
         "steps-usage": "cucumber-js test/features/**/*.feature --dry-run --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\" --format usage",
         "lint": "eslint src test --ext .js,.ts,.mjs,.cjs,.mts,.cts",
-        "lint:fix": "eslint src test --ext .js,.ts,.mjs,.cjs,.mts,.cts --fix"
+        "lint:fix": "eslint src test --ext .js,.ts,.mjs,.cjs,.mts,.cts --fix",
+        "format": "prettier --write \"src/**/*.{js,ts,mjs,cjs,mts,cts}\" \"test/**/*.{js,ts,mjs,cjs,mts,cts}\""
     },
     "dependencies": {
         "@azure/functions": "^4.7.2",
@@ -40,9 +41,13 @@
         "@types/node": "^22.15.21",
         "cucumber-console-formatter": "^1.0.0",
         "eslint": "^9.28.0",
+        "eslint-config-prettier": "^10.1.5",
+        "eslint-plugin-prettier": "^5.4.1",
+        "eslint-plugin-unused-imports": "^4.1.4",
         "globals": "^16.2.0",
         "jest": "^29.7.0",
         "jest-junit": "^16.0.0",
+        "prettier": "^3.5.3",
         "rimraf": "^6.0.1",
         "ts-jest": "^29.3.4",
         "typescript": "^5.8.3",
