--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -14,8 +14,8 @@
         "cucumber": "cucumber-js test/features/**/*.feature --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\"  --format html:reports/report.html --format summary --format @cucumber/pretty-formatter --format cucumber-console-formatter --format junit:reports/cucumber-report.xml",
         "snippets": "cucumber-js test/features/**/*.feature --dry-run --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\" --format snippets",
         "steps-usage": "cucumber-js test/features/**/*.feature --dry-run --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\" --format usage",
-        "lint": "eslint src test --ext .js,.ts,.mjs,.cjs,.mts,.cts",
-        "lint:fix": "eslint src test --ext .js,.ts,.mjs,.cjs,.mts,.cts --fix",
+        "lint": "eslint src test ",
+        "lint:fix": "eslint src test --fix",
         "format": "prettier --write \"src/**/*.{js,ts,mjs,cjs,mts,cts}\" \"test/**/*.{js,ts,mjs,cjs,mts,cts}\""
     },
     "dependencies": {
