--- a/azure-functions/.prettierrc
+++ b/azure-functions/.prettierrc
@@ -1,7 +1,10 @@
 {
   "singleQuote": true,
   "trailingComma": "all",
-  "printWidth": 100,
+  "printWidth": 120,
   "tabWidth": 4,
-  "semi": true
+  "semi": true,
+  "arrowParens": "avoid",
+  "bracketSpacing": true,
+  "endOfLine": "lf"
 }
