--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -23,12 +23,14 @@
         "@azure/identity": "^4.10.0",
         "@microsoft/microsoft-graph-client": "^3.0.7",
         "@types/sinon": "^17.0.4",
+        "@types/sqlstring": "^2.3.2",
         "franc-min": "^6.2.0",
         "hardened-fetch": "^1.2.3",
         "isomorphic-fetch": "^3.0.0",
         "jszip": "^3.10.1",
         "node-cache": "^5.1.2",
         "node-pptx-parser": "^1.0.1",
+        "sqlstring": "^2.3.3",
         "ts-node": "^10.9.2"
     },
     "devDependencies": {
