--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -9,7 +9,7 @@
         "clean": "rimraf dist",
         "prestart": "npm run clean && npm run build",
         "start": "func start",
-        "test": "jest && npm run cucumber",
+        "test": "jest --silent && npm run cucumber",
         "cucumber-check": "cucumber-js test/features/**/*.feature --dry-run  --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\" --format summary --format progress --format progress-bar",
         "cucumber": "cucumber-js test/features/**/*.feature --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\"  --format html:reports/report.html --format summary --format @cucumber/pretty-formatter --format cucumber-console-formatter --format junit:reports/cucumber-report.xml",
         "snippets": "cucumber-js test/features/**/*.feature --dry-run --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\" --format snippets",
@@ -48,6 +48,7 @@
         "globals": "^16.2.0",
         "jest": "^29.7.0",
         "jest-junit": "^16.0.0",
+        "memfs": "^4.17.2",
         "prettier": "^3.5.3",
         "rimraf": "^6.0.1",
         "sinon": "^20.0.0",
