add face detection

--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -22,14 +22,17 @@
         "@azure/functions": "^4.7.2",
         "@azure/identity": "^4.10.0",
         "@microsoft/microsoft-graph-client": "^3.0.7",
-        "@types/sinon": "^17.0.4",
+        "@tensorflow/tfjs-node": "^4.22.0",
+        "@vladmandic/face-api": "^1.7.15",
+        "canvas": "^3.1.0",
         "franc-min": "^6.2.0",
         "hardened-fetch": "^1.2.3",
         "isomorphic-fetch": "^3.0.0",
         "jszip": "^3.10.1",
         "node-cache": "^5.1.2",
         "node-pptx-parser": "^1.0.1",
-        "ts-node": "^10.9.2"
+        "ts-node": "^10.9.2",
+        "xml2js": "^0.6.2"
     },
     "devDependencies": {
         "@cucumber/cucumber": "^11.3.0",
@@ -40,6 +43,8 @@
         "@types/isomorphic-fetch": "^0.0.39",
         "@types/jest": "^29.5.14",
         "@types/node": "^22.15.21",
+        "@types/sinon": "^17.0.4",
+        "@types/xml2js": "^0.4.14",
         "cucumber-console-formatter": "^1.0.0",
         "eslint": "^9.28.0",
         "eslint-config-prettier": "^10.1.5",
