--- a/azure-functions/tsconfig.json
+++ b/azure-functions/tsconfig.json
@@ -7,6 +7,8 @@
         "sourceMap": true,
         "strict": true,
         "esModuleInterop": true,
-        "strictNullChecks": true
-    }
+        "strictNullChecks": true,
+        "skipLibCheck": true,
+    },
+    "exclude": ["node_modules", "dist", "reports"]
 }
