--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
               --parameters sharepointClientSecret=${{ secrets.SHAREPOINT_CLIENT_SECRET }} \
 
   deploy-functions:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     concurrency:
         group: 'AzureInfra'
     permissions:
