--- a/azure-functions/.funcignore
+++ b/azure-functions/.funcignore
@@ -13,3 +13,7 @@ node_modules/typescript/
 node_modules/rimraf/
 node_modules/aws-sdk/
 examples/
+experiments/
+infra/
+dist/test/
+dist/experiments/
