--- a/azure-functions/.funcignore
+++ b/azure-functions/.funcignore
@@ -4,15 +4,25 @@
 .vscode/
 *.md
 __*
-src/
-local.settings.json
+.DS_Store
+src/functions
 test
-node_modules/@types/
-node_modules/typescript/
-node_modules/rimraf/
-node_modules/aws-sdk/
-examples/
-experiments/
-infra/
-dist/test/
-dist/experiments/
+node_modules/@types
+node_modules/typescript
+node_modules/rimraf
+node_modules/aws-sdk
+node_modules/@tensorflow/tfjs-backend-webgl
+examples
+experiments
+infra
+dist/test
+dist/experiments
+.prettier*
+.tool-versions
+.editorconfig
+enclosingPowerOfTwo.config.mjs
+jest.config.js
+local.settings.json
+package-lock.json
+tsconfig.json
+
