--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -21,14 +21,17 @@
     "dependencies": {
         "@azure/functions": "^4.7.2",
         "@azure/identity": "^4.10.0",
+        "@mediapipe/face_detection": "^0.4.1646425229",
         "@microsoft/microsoft-graph-client": "^3.0.7",
-        "@tensorflow/tfjs-node": "^4.22.0",
-        "@vladmandic/face-api": "^1.7.15",
+        "@tensorflow-models/face-detection": "^1.0.3",
+        "@tensorflow/tfjs-converter": "^4.22.0",
+        "@tensorflow/tfjs-core": "^4.22.0",
         "canvas": "^3.1.0",
         "franc-min": "^6.2.0",
         "hardened-fetch": "^1.2.3",
         "isomorphic-fetch": "^3.0.0",
         "jszip": "^3.10.1",
+        "memfs": "^4.17.2",
         "node-cache": "^5.1.2",
         "node-pptx-parser": "^1.0.1",
         "ts-node": "^10.9.2",
@@ -53,7 +56,6 @@
         "globals": "^16.2.0",
         "jest": "^29.7.0",
         "jest-junit": "^16.0.0",
-        "memfs": "^4.17.2",
         "prettier": "^3.5.3",
         "rimraf": "^6.0.1",
         "sinon": "^20.0.0",
