--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -24,6 +24,7 @@
         "@mediapipe/face_detection": "^0.4.1646425229",
         "@microsoft/microsoft-graph-client": "^3.0.7",
         "@tensorflow-models/face-detection": "^1.0.3",
+        "@tensorflow/tfjs": "^4.22.0",
         "@tensorflow/tfjs-converter": "^4.22.0",
         "@tensorflow/tfjs-core": "^4.22.0",
         "canvas": "^3.1.0",
