use js solution for image laoding

--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -27,9 +27,9 @@
         "@tensorflow/tfjs": "^4.22.0",
         "@tensorflow/tfjs-converter": "^4.22.0",
         "@tensorflow/tfjs-core": "^4.22.0",
-        "canvas": "^3.1.0",
         "franc-min": "^6.2.0",
         "hardened-fetch": "^1.2.3",
+        "image-decode": "^1.2.2",
         "isomorphic-fetch": "^3.0.0",
         "jszip": "^3.10.1",
         "memfs": "^4.17.2",
