--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -24,9 +24,9 @@
         "@mediapipe/face_detection": "^0.4.1646425229",
         "@microsoft/microsoft-graph-client": "^3.0.7",
         "@tensorflow-models/face-detection": "^1.0.3",
-        "@tensorflow/tfjs": "^4.22.0",
         "@tensorflow/tfjs-converter": "^4.22.0",
         "@tensorflow/tfjs-core": "^4.22.0",
+        "@tensorflow/tfjs-node": "^4.22.0",
         "franc-min": "^6.2.0",
         "hardened-fetch": "^1.2.3",
         "image-decode": "^1.2.2",
