--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -26,6 +26,7 @@
         "@tensorflow-models/face-detection": "^1.0.3",
         "@tensorflow/tfjs-converter": "^4.22.0",
         "@tensorflow/tfjs-core": "^4.22.0",
+        "@vladmandic/face-api": "^1.7.15",
         "canvas": "^3.1.0",
         "franc-min": "^6.2.0",
         "hardened-fetch": "^1.2.3",
