MailPort and -adapter, config & changed folder structure

--- a/azure-functions/tsconfig.json
+++ b/azure-functions/tsconfig.json
@@ -9,6 +9,7 @@
         "esModuleInterop": true,
         "strictNullChecks": true,
         "skipLibCheck": true,
+        "resolveJsonModule": true
     },
-    "exclude": ["node_modules", "dist", "reports"]
+    "exclude": ["node_modules", "dist", "reports", "app_config", "models", "ressources"]
 }
