--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -9,7 +9,7 @@
         "clean": "rimraf dist",
         "prestart": "npm run clean && npm run build",
         "start": "func start",
-        "ci:x86": "npm ci --target_arch=ia32 --target_platform=win32",
+        "ci:windows_ia32": "npm ci --cpu=ia32 --os=win32",
         "test": "jest --silent && npm run cucumber",
         "cucumber-check": "cucumber-js test/features/**/*.feature --dry-run  --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\" --format summary --format progress --format progress-bar",
         "cucumber": "cucumber-js test/features/**/*.feature --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\"  --format html:reports/report.html --format summary --format @cucumber/pretty-formatter --format cucumber-console-formatter --format junit:reports/cucumber-report.xml",
@@ -25,9 +25,9 @@
         "@mediapipe/face_detection": "^0.4.1646425229",
         "@microsoft/microsoft-graph-client": "^3.0.7",
         "@tensorflow-models/face-detection": "^1.0.3",
+        "@tensorflow/tfjs": "^4.22.0",
         "@tensorflow/tfjs-converter": "^4.22.0",
         "@tensorflow/tfjs-core": "^4.22.0",
-        "@tensorflow/tfjs": "^4.22.0",
         "franc-min": "^6.2.0",
         "hardened-fetch": "^1.2.3",
         "isomorphic-fetch": "^3.0.0",
