--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -4,14 +4,14 @@
     "description": "",
     "main": "dist/src/functions/*.js",
     "scripts": {
-        "build": "rimraf build && tsc && npm run cucumber-check",
+        "build": "rimraf build && tsc",
         "watch": "tsc -w",
         "clean": "rimraf dist",
         "prestart": "npm run clean && npm run build",
         "start": "func start",
         "ci:windows_ia32": "npm ci --cpu=ia32 --os=win32",
         "test": "jest --silent && npm run cucumber",
-        "cucumber-check": "cucumber-js test/features/**/*.feature --dry-run  --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\" --format summary --format progress --format progress-bar",
+        "cucumber:check": "cucumber-js test/features/**/*.feature --dry-run  --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\" --format summary --format progress --format progress-bar",
         "cucumber": "cucumber-js test/features/**/*.feature --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\"  --format html:reports/report.html --format summary --format @cucumber/pretty-formatter --format cucumber-console-formatter --format junit:reports/cucumber-report.xml",
         "snippets": "cucumber-js test/features/**/*.feature --dry-run --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\" --format snippets",
         "steps-usage": "cucumber-js test/features/**/*.feature --dry-run --require test/features/**/*.ts --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\" --format usage",
