--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -23,10 +23,10 @@
         "@azure/identity": "^4.10.0",
         "@mediapipe/face_detection": "^0.4.1646425229",
         "@microsoft/microsoft-graph-client": "^3.0.7",
-        "@tensorflow/tfjs-converter": "^4.22.0",
-        "@tensorflow/tfjs-core": "^4.22.0",
         "@tensorflow-models/face-detection": "^1.0.3",
         "@tensorflow/tfjs-backend-cpu": "^4.22.0",
+        "@tensorflow/tfjs-converter": "^4.22.0",
+        "@tensorflow/tfjs-core": "^4.22.0",
         "@tensorflow/tfjs-node": "^4.22.0",
         "@vladmandic/face-api": "^1.7.15",
         "canvas": "^3.1.0",
@@ -38,6 +38,7 @@
         "node-cache": "^5.1.2",
         "node-pptx-parser": "^1.0.1",
         "sharp": "^0.34.2",
+        "template-file": "^6.0.1",
         "ts-node": "^10.9.2",
         "xml2js": "^0.6.2"
     },
