--- a/azure-functions/local.settings.json
+++ b/azure-functions/local.settings.json
@@ -9,7 +9,7 @@
     "SHAREPOINT_API_LOGGING": "true",
     "SHAREPOINT_ONE_PAGER_SITE_NAME": "senacor.sharepoint.com:/sites/MaInfo",
     "SHAREPOINT_VALIDATION_SITE_NAME": "senacor.sharepoint.com:/teams/MaInfoTest",
-    "SHAREPOINT_VALIDATION_RESULT_LIST_NAME": "onepager-status",
+    "SHAREPOINT_VALIDATION_RESULT_LIST_NAME": "OnePager_Status",
     "SHAREPOINT_CLIENT_ID": "1621d264-a7bb-40b6-bfef-9b2839cb7eec",
     "SHAREPOINT_TENANT_ID": "52497ec2-0945-4f55-8021-79766363dd96",
     "SHAREPOINT_CLIENT_SECRET": "<add your client secret here>",
