--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -46,6 +46,9 @@ jobs:
         run: |
           cd onepager-web
           npm run build
+        env:
+          VITE_API_BASE_URL: https://poc-one-pager.azurewebsites.net
+          VITE_ENVIRONMENT: production
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
@@ -63,11 +66,6 @@ jobs:
           bundle exec jekyll build --destination _site
         env:
           JEKYLL_ENV: production
-
-      - name: Build Vite app into Jekyll site  
-        run: |
-          cd onepager-web
-          npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
