--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -34,7 +34,9 @@
         "isomorphic-fetch": "^3.0.0",
         "jszip": "^3.10.1",
         "memfs": "^4.17.2",
+        "moment": "^2.30.1",
         "node-cache": "^5.1.2",
+        "pug": "^3.0.3",
         "sharp": "^0.34.2",
         "template-file": "^6.0.1",
         "ts-node": "^10.9.2",
@@ -52,6 +54,7 @@
         "@types/isomorphic-fetch": "^0.0.39",
         "@types/jest": "^30.0.0",
         "@types/node": "^22.15.21",
+        "@types/pug": "^2.0.10",
         "@types/sinon": "^17.0.4",
         "@types/xml2js": "^0.4.14",
         "babel-jest": "^30.0.0",
