--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,7 @@ jobs:
             echo "check if validation error was written"
             if ! jq -e 'index("MISSING_DE_VERSION")' .storage/1338_DE_validation.json >/dev/null; then
               echo 'File does not contain "MISSING_DE_VERSION" in the array' >&2
+              cat .storage/1338_DE_validation.json >&2
               exit 1
             fi
 
