--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,7 +96,7 @@ jobs:
             sleep 8 # wait for the function to finish processing
 
             echo "check if validation error was written"
-            if ! jq -e 'index("MISSING_DE_VERSION")' .storage/1338_DE_validation.json >/dev/null; then
+            if ! jq -e '.[] | index("MISSING_DE_VERSION")' .storage/1338_DE_validation.json >/dev/null; then
               echo 'File does not contain "MISSING_DE_VERSION" in the array' >&2
               cat .storage/1338_DE_validation.json >&2
               exit 1
