--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - experiments
     paths:
       - 'docs/**'
       - 'onepager-web/**'
@@ -66,6 +67,8 @@ jobs:
         env:
           VITE_API_BASE_URL: https://poc-one-pager.azurewebsites.net
           VITE_ENVIRONMENT: production
+          ASSET_URL: ${{ env.ASSET_URL}}
+
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
