--- a/onepager-web/.env.example
+++ b/onepager-web/.env.example
@@ -8,6 +8,8 @@
 # For production (Azure Functions deployed)
 # VITE_API_BASE_URL=https://your-functions-app.azurewebsites.net
 # VITE_FUNCTIONS_KEY=your-production-key-here
+# ASSETS_URL=/One-Pager-Management/app/
+
 
 # Environment identifier
 # VITE_ENVIRONMENT=local|production|development
